--- a/style.css
+++ b/style.css
@@ -6,16 +6,15 @@ body {
 }
 
 .js-cards {
-  max-width: 845px;
+  width: fit-content;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
   gap: 15px;
   margin: 0 auto;
 }
 
 .js-card {
-  width: 200px;
-  height: 160px;
+  width: 150px;
+  height: 140px;
   position: relative;
 }
 
@@ -48,8 +47,8 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100px;
-  width: 100px;
+  height: 80px;
+  width: 50px;
   padding: 30px 50px;
   top: 0;
   left: 0;
